deployment-strategies/Blue-Green-Deployment/deployment-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deployment-blue
  labels:
    app: nodejs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs
      version: blue
  template:
    metadata:
      labels:
        app: nodejs
        version: blue
    spec:
      containers:
      - name: nodejs-blue
        image: naresh240/nodejs-k8s:v1
        ports:
        - containerPort: 8080
