deployment-strategies/Blue-Green-Deployment/deployment-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deployment-green
  labels:
    app: nodejs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs
      version: green
  template:
    metadata:
      labels:
        app: nodejs
        version: green
    spec:
      containers:
      - name: nodejs-green
        image: naresh240/nodejs-k8s:v2
        ports:
        - containerPort: 8080
