deployment-strategies/Blue-Green-Deployment/service-green.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service-green
spec:
  type: NodePort
  selector:
    app: nodejs
    version: v2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30002
