deployment-strategies/Blue-Green-Deployment/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  type: NodePort
  selector:
    app: nodejs
    version: green
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001
